--- a/source/jade/_layout.jade
+++ b/source/jade/_layout.jade
@@ -21,22 +21,23 @@ html
 								li
 									a(href="#") О проекте
 						.user.js-usermenu
-							.name
-								a(href="#") 
-									.title Алексей Петров
-									.email petrov.i1975@mail.ru
-							.pic
-								.ava
-									img(src="img/content/ava-1.png", alt="")
-								.count
-									a(href="#") 9
-								.arrow
+							.menu-wrap
+								.name
+									a(href="#") 
+										.title Алексей Петров
+										.email petrov.i1975@mail.ru
+								.pic
+									.ava
+										img(src="img/content/ava-1.png", alt="")
+									.count
+										a(href="#") 9
+									.arrow
 							ul.user-drop.js-usermenu-drop
-								li.user-drop__link.user-drop__link_work: a(href="#") Рабочая область
-								li.user-drop__link.user-drop__link_request: a(href="#") Заявки
-								li.user-drop__link.user-drop__link_messages: a(href="#") Сообщения
+								li.user-drop__link.user-drop__link_work: a(href="#work") Рабочая область
+								li.user-drop__link.user-drop__link_request: a(href="#orders") Заявки
+								li.user-drop__link.user-drop__link_messages: a(href="#msg") Сообщения
 								li.user-drop__link.user-drop__link_notifyc
-									a(href="#") Уведомления
+									a(href="#counts") Уведомления
 										span.count
 											i 9 
 				//------------------------------------------------
