--- a/source/jade/docs-item.jade
+++ b/source/jade/docs-item.jade
@@ -1,13 +1,9 @@
-//- Шаблон
-//------------------------------------------------
 extends _layout
 
-//- Загаловок страницы
 block title
 	| - Документ
 
-//- Контент
-//------------------------------------------------
+
 block append content
 	.main-width.main-wrap
 		.pathway
@@ -26,6 +22,11 @@ block append content
 				.bname
 					h1 Свидетельство о государственной  <br>регистрации программы для ЭВМ
 					p № 2013610190 от 09.01.2013
+				.prev-ver-box
+					a(href="#") Версия №2
+					.prev-ver
+						span Предыдущие версии: 
+						a(href="#") Версия №1
 				p Динамическое уравнение Эйлера, согласно третьему закону Ньютона, <br>изменяет слабоминерализованный бентос. 
 				.tags.mar-bot-20
 					a(href="#").tags-item.js-open-coming-soon
