--- a/source/jade/docs.jade
+++ b/source/jade/docs.jade
@@ -35,7 +35,12 @@ block append content
 						a(href="#") JPG - 7 Мб
 						a(href="#") PDF - 12 Мб
 					.file-desc
-						.date Добавлен: 13 октября 2012
+						.date.mar-bot-5 Добавлен: 13 октября 2012
+						.date 
+							a(href="#") Версия №2
+							.prev-ver
+								span Предыдущие версии: 
+								a(href="#") Версия №1
 						.text Свидетельство о государственной регистрации программы для ЭВМ № 2013610190 от 09.01.2013 (заявка № 2012619800).
 						.subtext Аспирант Назимов Алексей Игоревич, физический факультет, 2 год обучения
 						.tags
@@ -50,7 +55,12 @@ block append content
 						a(href="#") JPG - 7 Мб
 						a(href="#") PDF - 12 Мб
 					.file-desc
-						.date Добавлен: 13 октября 2012
+						.date.mar-bot-5 Добавлен: 13 октября 2012
+						.date 
+							a(href="#") Версия №2
+							.prev-ver
+								span Предыдущие версии: 
+								a(href="#") Версия №1
 						.text Свидетельство о государственной регистрации программы для ЭВМ № 2013610190 от 09.01.2013 (заявка № 2012619800).
 						.subtext Аспирант Назимов Алексей Игоревич, физический факультет, 2 год обучения
 						.tags
@@ -65,7 +75,12 @@ block append content
 						a(href="#") JPG - 7 Мб
 						a(href="#") PDF - 12 Мб
 					.file-desc
-						.date Добавлен: 13 октября 2012
+						.date.mar-bot-5 Добавлен: 13 октября 2012
+						.date 
+							a(href="#") Версия №2
+							.prev-ver
+								span Предыдущие версии: 
+								a(href="#") Версия №1
 						.text Свидетельство о государственной регистрации программы для ЭВМ № 2013610190 от 09.01.2013 (заявка № 2012619800).
 						.subtext Аспирант Назимов Алексей Игоревич, физический факультет, 2 год обучения
 						.tags
@@ -80,7 +95,12 @@ block append content
 						a(href="#") JPG - 7 Мб
 						a(href="#") PDF - 12 Мб
 					.file-desc
-						.date Добавлен: 13 октября 2012
+						.date.mar-bot-5 Добавлен: 13 октября 2012
+						.date 
+							a(href="#") Версия №2
+							.prev-ver
+								span Предыдущие версии: 
+								a(href="#") Версия №1
 						.text Свидетельство о государственной регистрации программы для ЭВМ № 2013610190 от 09.01.2013 (заявка № 2012619800).
 						.subtext Аспирант Назимов Алексей Игоревич, физический факультет, 2 год обучения
 						
@@ -89,7 +109,12 @@ block append content
 						a(href="#") JPG - 7 Мб
 						a(href="#") PDF - 12 Мб
 					.file-desc
-						.date Добавлен: 13 октября 2012
+						.date.mar-bot-5 Добавлен: 13 октября 2012
+						.date 
+							a(href="#") Версия №2
+							.prev-ver
+								span Предыдущие версии: 
+								a(href="#") Версия №1
 						.text Свидетельство о государственной регистрации программы для ЭВМ № 2013610190 от 09.01.2013 (заявка № 2012619800).
 						.subtext Аспирант Назимов Алексей Игоревич, физический факультет, 2 год обучения
 						.tags
@@ -104,7 +129,12 @@ block append content
 						a(href="#") JPG - 7 Мб
 						a(href="#") PDF - 12 Мб
 					.file-desc
-						.date Добавлен: 13 октября 2012
+						.date.mar-bot-5 Добавлен: 13 октября 2012
+						.date 
+							a(href="#") Версия №2
+							.prev-ver
+								span Предыдущие версии: 
+								a(href="#") Версия №1
 						.text Свидетельство о государственной регистрации программы для ЭВМ № 2013610190 от 09.01.2013 (заявка № 2012619800).
 						.subtext Аспирант Назимов Алексей Игоревич, физический факультет, 2 год обучения
 						.tags
@@ -119,7 +149,12 @@ block append content
 						a(href="#") JPG - 7 Мб
 						a(href="#") PDF - 12 Мб
 					.file-desc
-						.date Добавлен: 13 октября 2012
+						.date.mar-bot-5 Добавлен: 13 октября 2012
+						.date 
+							a(href="#") Версия №2
+							.prev-ver
+								span Предыдущие версии: 
+								a(href="#") Версия №1
 						.text Свидетельство о государственной регистрации программы для ЭВМ № 2013610190 от 09.01.2013 (заявка № 2012619800).
 						.subtext Аспирант Назимов Алексей Игоревич, физический факультет, 2 год обучения
 						.tags
@@ -134,7 +169,12 @@ block append content
 						a(href="#") JPG - 7 Мб
 						a(href="#") PDF - 12 Мб
 					.file-desc
-						.date Добавлен: 13 октября 2012
+						.date.mar-bot-5 Добавлен: 13 октября 2012
+						.date 
+							a(href="#") Версия №2
+							.prev-ver
+								span Предыдущие версии: 
+								a(href="#") Версия №1
 						.text Свидетельство о государственной регистрации программы для ЭВМ № 2013610190 от 09.01.2013 (заявка № 2012619800).
 						.subtext Аспирант Назимов Алексей Игоревич, физический факультет, 2 год обучения
 						.tags
