--- a/source/styl/style.styl
+++ b/source/styl/style.styl
@@ -624,12 +624,15 @@ color-orange()
 
 //	PADs MARGs
 // ===============================================
+.mar-bot-5
+	margin-bottom 5px
+.mar-bot-10
+	margin-bottom 10px
 .mar-bot-20
 	margin-bottom 20px
 .mar-bot-30
 	margin-bottom 30px
-.mar-bot-10
-	margin-bottom 10px
+
 .mar-top-20m
 	margin-top -15px
 .mar-top-20
@@ -2340,6 +2343,9 @@ textarea.inp-full
 			vertical-align middle;
 			.date
 				color #CCC; font-size 11px;
+			.prev-ver
+				display inline-block
+				margin-left 10px
 			.text
 				padding 10px 0;
 				color #333; font-size 14px;
@@ -4123,3 +4129,10 @@ input.inp-radio + label
 	width 600px
 	height 500px
 	padding 0 !important
+	
+.prev-ver-box
+	margin-top -30px
+	margin-bottom 30px
+	.prev-ver
+		display inline-block
+		margin-left 5px
