--- a/source/jade/_layout.jade
+++ b/source/jade/_layout.jade
@@ -36,10 +36,11 @@ html
 								li.user-drop__link.user-drop__link_work: a(href="#work") Рабочая область
 								li.user-drop__link.user-drop__link_request: a(href="#orders") Заявки
 								li.user-drop__link.user-drop__link_messages: a(href="#msg") Сообщения
-								li.user-drop__link.user-drop__link_notifyc
+								li.user-drop__link.user-drop__link_notify
 									a(href="#counts") Уведомления
 										span.count
 											i 9 
+								li.user-drop__link.user-drop__link_exit: a(href="#msg") Выход
 				//------------------------------------------------
 				block content
 				include _footer
