--- a/source/jade/main.jade
+++ b/source/jade/main.jade
@@ -429,19 +429,33 @@ block append content
 			.box-events.box-right
 				.bname
 					h3: a(href="#") События
-				.bcon
-					.item
-						.idate 09.09 >
-						.iname 
-							a(href="#") Конференция по промышленному дизайну
-					.item
-						.idate 18.09 >
-						.iname 
-							a(href="#") Конкурс проектов в области энергосбережения
-					.item
-						.idate 22.09 >
-						.iname 
-							a(href="#") Конкурс проектов в области энергосбережения
+				.bcon.animate-height.js-news-cal
+					.items.month-09.month-01.month-02.month-03.month-04.month-05.month-06.month-07
+						.item
+							.idate 09.09 >
+							.iname 
+								a(href="#") Конференция по промышленному дизайну
+						.item
+							.idate 18.09 >
+							.iname 
+								a(href="#") Конкурс проектов в области энергосбережения
+						.item
+							.idate 22.09 >
+							.iname 
+								a(href="#") Конкурс проектов в области энергосбережения
+					.items.month-10.hide
+						.item
+							.idate 09.10 >
+							.iname 
+								a(href="#") Конференция по промышленному дизайну
+						.item
+							.idate 18.10 >
+							.iname 
+								a(href="#") Конкурс проектов в области энергосбережения
+						.item
+							.idate 22.10 >
+							.iname 
+								a(href="#") Конкурс проектов в области энергосбережения
 				.calendar-wrap
 					input(type="text").calendar-widget
 			//------------------------------------------------
