--- a/source/styl/style.styl
+++ b/source/styl/style.styl
@@ -509,9 +509,11 @@ color-orange()
 			background url("../img/m-request.png") 17px 25px no-repeat
 		&_messages
 			background url("../img/m-talks.png") 17px 25px no-repeat
-		&_notifyc
+		&_notify
 			background url("../img/m-notification.png") 17px 25px no-repeat
-		
+		&_exit
+			background url("../img/m-exit.png") 17px 25px no-repeat
+				
 		a
 			display block
 			padding 25px 0px 25px 50px
