--- a/source/styl/style.styl
+++ b/source/styl/style.styl
@@ -205,7 +205,7 @@ color-orange()
 .col-3
 	display table-cell 
 	table-layout fixed
-	width 32%
+	width 33.3%
 	vertical-align top
 	// mod
 	&_sep
@@ -2011,6 +2011,7 @@ textarea.inp-full
 		opacity .6; 
 		&:hover
 			opacity 1;
+
 
 .box-simular-docs
 	.bcon
@@ -3957,6 +3958,12 @@ footer
 		font-size 24px
 		text-transform uppercase
 		padding-bottom 40px
+		.desc
+			display block
+			padding-top 10px
+			font-size 14px
+			color #333
+			text-transform none
 	&__form
 		clearfix()
 		margin-bottom -50px
@@ -4019,7 +4026,10 @@ input.inp-field_70
 input.inp-radio + label
 	font-size 14px
 	font-weight 400
-	
+.inp-radio-block + label
+	display block
+	pdding-bottom 20px
+		
 
 //	#content	
 .con-dess-lines
@@ -4138,3 +4148,101 @@ input.inp-radio + label
 	.prev-ver
 		display inline-block
 		margin-left 5px
+		
+.select-wrap
+	position relative
+	width 420px
+	full()
+	font-size 14px
+	margin-bottom 10px
+	text-align left
+	color #333
+	&:hover
+		.select
+			//border-color #1d6c99
+	.select
+		position relative
+		width 100%
+		full()
+		height 50px
+		padding 13px 25px 13px 15px
+		background #fff
+		border 1px solid #e5e5e5
+		cursor pointer
+		white-space nowrap
+		text-overflow ellipsis
+		anim()
+		.title
+				padding 0 !important
+				color #333
+				overflow hidden
+		&.active
+			border-color #e5e5e5
+			.arrow
+				transform rotate(180deg)
+				background-position 0 -8px
+		.arrow
+			position absolute
+			width 14px
+			height 8px
+			right 10px
+			top 21px
+			content " "
+			background url("../img/arrow-down.png") 0 0 no-repeat
+			anim()
+	ul.option-list
+		display:none
+		overflow hidden
+		z-index 6
+		position relative
+		left 0
+		top -1px
+		width 100%
+		full()
+		lino();
+		background #fff
+		//border 1px solid #e5e5e5
+		li
+			font-size 14px
+			color #333
+			padding 10px 15px
+			cursor pointer;
+			border 1px solid #e5e5e5
+			&:hover
+				background #fff9f6
+				border 1px solid #ff8c4d
+			&.active
+				//background #fff9f6
+				cursor default;
+		li:last-child
+			//border-bottom none;
+				
+input.inp-text_sm
+	width 95px
+
+.date-period
+	color #333
+	font-size 14px
+	.inline
+		margin-right 10px
+	a.cal
+		margin-bottom -10px
+		margin-right 20px
+		display inline-block
+		width 30px
+		height 32px
+		background url("../img/icons/cal.jpg") no-repeat;
+		opacity .6; 
+		cursor default
+		&:hover
+			//opacity 1
+	.days
+		padding-left 180px
+		a
+			display inline-block
+			margin-right 28px
+			tdn() 
+			border-bottom 1px dashed #F85800
+			&:hover
+				tdn()
+				border-bottom none 
