upd add field version on document

--- a/source/jade/lk-new.jade
+++ b/source/jade/lk-new.jade
@@ -89,6 +89,11 @@ block append content
 						input(type="text", placeholder="", value="Машиностроение Металлообработка").inp-field.inp-field_500
 						.desc укажите через пробел
 				.lineedit
+					.lineedit__name
+						| Версия документы
+					.lineedit__con
+						input(type="text", placeholder="", value="Версия документа").inp-field.inp-field_500
+				.lineedit
 					.lineedit__name Изображение
 					.lineedit__con
 						.formgroup.articles__edit-images
