--- a/source/jade/lk-new-public.jade
+++ b/source/jade/lk-new-public.jade
@@ -38,56 +38,57 @@ block append content
 					.bname
 						h3: a(href="#") Оборудование
 					.bcon.bcon--padding
-						.col-3_border
-							.item.item--edit
-								.iprev
-									a(href="#") 
-										img(src="img/content/200-120-1.jpg", alt="")
-								.iname
-									a(href="#") Установка для исследования радиационного и термического выделения газов из неорганических материалов 
-								.itext Национальный исследовательский Томский политехнический университет 
-								.irating
-									span Рейтинг
-									ul
-										li.star
-										li.star
-										li.star
-										li
-										li
-						.col-3_sep
-						.col-3_border
-							.item.item--edit
-								.iprev
-									a(href="#") 
-										img(src="img/content/200-120-2.jpg", alt="")
-								.iname
-									a(href="#") Тренажёр-имитатор бурения (учебный класс АМТ-231 УК) 
-								.itext Кубанский государственный технологический университет 
-								.irating
-									span Рейтинг
-									ul
-										li.star
-										li.star
-										li.star
-										li.star
-										li
-						.col-3_sep
-						.col-3_border
-							.item.item--edit
-								.iprev
-									a(href="#") 
-										img(src="img/content/200-120-1.jpg", alt="")
-								.iname
-									a(href="#") Установка для исследования радиационного и термического выделения газов из неорганических материалов 
-								.itext Национальный исследовательский Томский политехнический университет 
-								.irating
-									span Рейтинг
-									ul
-										li.star
-										li.star
-										li.star
-										li
-										li
+						.table-sm
+							.col-3_border
+								.item.item--edit
+									.iprev
+										a(href="#") 
+											img(src="img/content/200-120-1.jpg", alt="")
+									.iname
+										a(href="#") Установка для исследования радиационного и термического выделения газов из неорганических материалов 
+									.itext Национальный исследовательский Томский политехнический университет 
+									.irating
+										span Рейтинг
+										ul
+											li.star
+											li.star
+											li.star
+											li
+											li
+							.col-3_sep
+							.col-3_border
+								.item.item--edit
+									.iprev
+										a(href="#") 
+											img(src="img/content/200-120-2.jpg", alt="")
+									.iname
+										a(href="#") Тренажёр-имитатор бурения (учебный класс АМТ-231 УК) 
+									.itext Кубанский государственный технологический университет 
+									.irating
+										span Рейтинг
+										ul
+											li.star
+											li.star
+											li.star
+											li.star
+											li
+							.col-3_sep
+							.col-3_border
+								.item.item--edit
+									.iprev
+										a(href="#") 
+											img(src="img/content/200-120-1.jpg", alt="")
+									.iname
+										a(href="#") Установка для исследования радиационного и термического выделения газов из неорганических материалов 
+									.itext Национальный исследовательский Томский политехнический университет 
+									.irating
+										span Рейтинг
+										ul
+											li.star
+											li.star
+											li.star
+											li
+											li
 						.clear
 						.all_full
 							a(href="#") Все оборудование
@@ -98,47 +99,48 @@ block append content
 						h3 
 							a(href="#") Высокотехнологичные Услуги
 					.bcon.bcon--padding
-						.col-3_border
-							.item.item--edit
-								.iname
-									a(href="#") Установка для исследования радиационного и термического выделения газов из неорганических материалов 
-								.itext Национальный исследовательский Томский политехнический университет 
-								.irating
-									span Рейтинг
-									ul
-										li.star
-										li.star
-										li.star
-										li
-										li
-						.col-3_sep
-						.col-3_border
-							.item.item--edit
-								.iname
-									a(href="#") Тренажёр-имитатор бурения (учебный класс АМТ-231 УК) 
-								.itext Кубанский государственный технологический университет 
-								.irating
-									span Рейтинг
-									ul
-										li.star
-										li.star
-										li.star
-										li.star
-										li
-						.col-3_sep
-						.col-3_border
-							.item.item--edit
-								.iname
-									a(href="#") Тренажёр-имитатор бурения (учебный класс АМТ-231 УК) 
-								.itext Кубанский государственный технологический университет 
-								.irating
-									span Рейтинг
-									ul
-										li.star
-										li.star
-										li.star
-										li.star
-										li
+						.table-sm
+							.col-3_border
+								.item.item--edit
+									.iname
+										a(href="#") Установка для исследования радиационного и термического выделения газов из неорганических материалов 
+									.itext Национальный исследовательский Томский политехнический университет 
+									.irating
+										span Рейтинг
+										ul
+											li.star
+											li.star
+											li.star
+											li
+											li
+							.col-3_sep
+							.col-3_border
+								.item.item--edit
+									.iname
+										a(href="#") Тренажёр-имитатор бурения (учебный класс АМТ-231 УК) 
+									.itext Кубанский государственный технологический университет 
+									.irating
+										span Рейтинг
+										ul
+											li.star
+											li.star
+											li.star
+											li.star
+											li
+							.col-3_sep
+							.col-3_border
+								.item.item--edit
+									.iname
+										a(href="#") Тренажёр-имитатор бурения (учебный класс АМТ-231 УК) 
+									.itext Кубанский государственный технологический университет 
+									.irating
+										span Рейтинг
+										ul
+											li.star
+											li.star
+											li.star
+											li.star
+											li
 						.clear
 						.all_full
 							a(href="#") Все услуги
@@ -149,51 +151,51 @@ block append content
 						h3 
 							a(href="#") Программное обеспечение
 					.bcon.bcon--padding
-						.col-3_border
-							.item.item--edit
-								.iname
-									a(href="#") Разработка систем диспетчерского контроля и управления
-								.itext ЗАО Самфинг <br>
-									a(href="#") http://elesy.ru/engineering/services
-								.irating
-									span Рейтинг
-									ul
-										li.star
-										li.star
-										li.star
-										li
-										li
-						.col-3_sep
-						.col-3_border
-							.item.item--edit
-								.iname
-									a(href="#") Тренажёр-имитатор бурения (учебный класс АМТ-231 УК) 
-								.itext ЗАО «ЭлеСи» <br>
-									a(href="#") http://elesy.ru/engineering/services
-								.irating
-									span Рейтинг
-									ul
-										li.star
-										li.star
-										li.star
-										li
-										li
-						.col-3_sep
-						.col-3_border
-							.item.item--edit
-								.iname
-									a(href="#") Тренажёр-имитатор бурения (учебный класс АМТ-231 УК) 
-								.itext ЗАО «ЭлеСи» <br>
-									a(href="#") http://elesy.ru/engineering/services
-								.irating
-									span Рейтинг
-									ul
-										li.star
-										li.star
-										li.star
-										li
-										li
-						.clear
+						.table-sm
+							.col-3_border
+								.item.item--edit
+									.iname
+										a(href="#") Разработка систем диспетчерского контроля и управления
+									.itext ЗАО Самфинг <br>
+										a(href="#") http://elesy.ru/engineering/services
+									.irating
+										span Рейтинг
+										ul
+											li.star
+											li.star
+											li.star
+											li
+											li
+							.col-3_sep
+							.col-3_border
+								.item.item--edit
+									.iname
+										a(href="#") Тренажёр-имитатор бурения (учебный класс АМТ-231 УК) 
+									.itext ЗАО «ЭлеСи» <br>
+										a(href="#") http://elesy.ru/engineering/services
+									.irating
+										span Рейтинг
+										ul
+											li.star
+											li.star
+											li.star
+											li
+											li
+							.col-3_sep
+							.col-3_border
+								.item.item--edit
+									.iname
+										a(href="#") Тренажёр-имитатор бурения (учебный класс АМТ-231 УК) 
+									.itext ЗАО «ЭлеСи» <br>
+										a(href="#") http://elesy.ru/engineering/services
+									.irating
+										span Рейтинг
+										ul
+											li.star
+											li.star
+											li.star
+											li
+											li
 						.all_full
 							a(href="#") Все программы
 						.sep_full
@@ -203,51 +205,36 @@ block append content
 						h3 
 							a(href="#") Объекты научно-технического потенциала
 					.bcon.bcon--padding
-						.col-3_border
-							.item.item--edit
-								.iname
-									a(href="#") Автолаборатория для проведения энергетического обследования на базе ГАЗ-27527 
-								.itext Предназначена для исследования эксплуатационных характеристик продуктивных пластов <br><br>
-									a(href="#").link-orange ТюмГНГУ
-								.irating
-									span Рейтинг
-									ul
-										li.star
-										li.star
-										li.star
-										li
-										li
-						.col-3_sep
-						.col-3_border
-							.item.item--edit
-								.iname
-									a(href="#") Автоматизированное рабочее место конструктора АРМК 
-								.itext Для проектирования и моделирования МКА <br><br>
-									a(href="#").link-orange ЮЗГУ
-								.irating
-									span Рейтинг
-									ul
-										li.star
-										li.star
-										li.star
-										li
-										li
-						.col-3_sep
-						.col-3_border
-							.item.item--edit
-								.iname
-									a(href="#") Автоматизированное рабочее место конструктора АРМК 
-								.itext Для проектирования и моделирования МКА <br><br>
-									a(href="#").link-orange ЮЗГУ
-								.irating
-									span Рейтинг
-									ul
-										li.star
-										li.star
-										li.star
-										li
-										li
-						.clear
+						.table-sm
+							.col-3_border
+								.item.item--edit
+									.iname
+										a(href="#") Автоматизированное рабочее место конструктора АРМК 
+									.itext Для проектирования и моделирования МКА <br><br>
+										a(href="#").link-orange ЮЗГУ
+									.irating
+										span Рейтинг
+										ul
+											li.star
+											li.star
+											li.star
+											li
+											li
+							.col-3_sep
+							.col-3_border
+								.item.item--edit
+									.iname
+										a(href="#") Автоматизированное рабочее место конструктора АРМК 
+									.itext Для проектирования и моделирования МКА <br><br>
+										a(href="#").link-orange ЮЗГУ
+									.irating
+										span Рейтинг
+										ul
+											li.star
+											li.star
+											li.star
+											li
+											li
 						.all_full
 							a(href="#") Все программы
 						.sep_full
@@ -258,53 +245,54 @@ block append content
 						h3 
 							a(href="#") Потребности в услугах и оборудовании
 					.bcon.bcon--padding
-						.col-3_border
-							.item.item--edit
-								.idate 19 сентября 2014 года
-								.iname
-									a(href="#") Разработка систем диспетчерского контроля и управления
-								.itext 	
-									p
-										b Описание задачи: 
-										| Здравствуйте, прошу сообщить о возможности проектирования грейферов.
-									p С уважением, Олег Джагупов
-									p
-										b Контакт: 
-										| Djagupovol@mzmo.ru
-								.isuggest
-									a(href="#") Предложить решение
-						.col-3_sep
-						.col-3_border
-							.item.item--edit
-								.idate 19 сентября 2014 года
-								.iname
-									a(href="#") Тренажёр-имитатор бурения (учебный класс АМТ-231 УК) 
-								.itext 	
-									p
-										b Описание задачи: 
-										| Здравствуйте, прошу сообщить о возможности проектирования грейферов.
-									p С уважением, Олег Джагупов
-									p
-										b Контакт: 
-										| Djagupovol@mzmo.ru
-								.isuggest
-									a(href="#") Предложить решение
-						.col-3_sep
-						.col-3_border
-							.item.item--edit
-								.idate 19 сентября 2014 года
-								.iname
-									a(href="#") Тренажёр-имитатор бурения (учебный класс АМТ-231 УК) 
-								.itext 	
-									p
-										b Описание задачи: 
-										| Здравствуйте, прошу сообщить о возможности проектирования грейферов.
-									p С уважением, Олег Джагупов
-									p
-										b Контакт: 
-										| Djagupovol@mzmo.ru
-								.isuggest
-									a(href="#") Предложить решение
+						.table-sm
+							.col-3_border
+								.item.item--edit
+									.idate 19 сентября 2014 года
+									.iname
+										a(href="#") Разработка систем диспетчерского контроля и управления
+									.itext 	
+										p
+											b Описание задачи: 
+											| Здравствуйте, прошу сообщить о возможности проектирования грейферов.
+										p С уважением, Олег Джагупов
+										p
+											b Контакт: 
+											| Djagupovol@mzmo.ru
+									.isuggest
+										a(href="#") Предложить решение
+							.col-3_sep
+							.col-3_border
+								.item.item--edit
+									.idate 19 сентября 2014 года
+									.iname
+										a(href="#") Тренажёр-имитатор бурения (учебный класс АМТ-231 УК) 
+									.itext 	
+										p
+											b Описание задачи: 
+											| Здравствуйте, прошу сообщить о возможности проектирования грейферов.
+										p С уважением, Олег Джагупов
+										p
+											b Контакт: 
+											| Djagupovol@mzmo.ru
+									.isuggest
+										a(href="#") Предложить решение
+							.col-3_sep
+							.col-3_border
+								.item.item--edit
+									.idate 19 сентября 2014 года
+									.iname
+										a(href="#") Тренажёр-имитатор бурения (учебный класс АМТ-231 УК) 
+									.itext 	
+										p
+											b Описание задачи: 
+											| Здравствуйте, прошу сообщить о возможности проектирования грейферов.
+										p С уважением, Олег Джагупов
+										p
+											b Контакт: 
+											| Djagupovol@mzmo.ru
+									.isuggest
+										a(href="#") Предложить решение
 						.clear
 						.all_full
 							a(href="#") Все потребности
