--- a/source/jade/main.jade
+++ b/source/jade/main.jade
@@ -214,9 +214,9 @@ block append content
 							"ЮЗГУ"
 						)
 						+item-ntp(
-							"Автоматизированный учебно-исследовательский комплекс «Логос»",
-							"Проведение практических, лабораторных и исследовательских работ на базе реального оборудования",
-							"СибГИУ"
+							"автоматизированный учебно-исследовательский комплекс «логос»",
+							"проведение практических, лабораторных и исследовательских работ на базе реального оборудования",
+							"сибгиу"
 						)
 						.clear
 						.all
