--- a/source/jade/reports.jade
+++ b/source/jade/reports.jade
@@ -5,13 +5,59 @@ extends _layout
 //- Загаловок страницы
 block title
 	| - Отчеты
-	
+
+block styles
+	link(href="css/jquery.datetimepicker.css", rel="stylesheet")
+	link(href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet")
 block scripts
+	script(src="js/jquery.datetimepicker.js", type="text/javascript")
 	script(src="js/jquery.easypiechart.min.js", type="text/javascript")
 
 //- Контент
 //------------------------------------------------
 block append content
+	.remodal(data-remodal-id="report-add")
+		.popedit
+			.popedit__name 
+				| Построить отчет
+				.desc о добавлении новых объектов каталогизации
+			.popedit__form
+				.lineedit
+					.mar-bot-20
+						input(id="radio-s-1" type="radio" name="radio" checked).inp-radio.inp-radio-block
+						label(for="radio-s-1") за выбранный промежуток времени
+					.mar-bot-20
+						input(id="radio-s-2" type="radio" name="radio").inp-radio.inp-radio-block
+						label(for="radio-s-2") по областям
+				.lineedit
+					.select-wrap
+						input(type="hidden" name="" value="")
+						.select
+							span.title Области
+							span.arrow
+						ul.option-list
+							li(data-value="1") Автоматизация
+							li(data-value="2") Биомедицинские материалы 
+							li(data-value="3") Биомедицинские полимерные материалы 
+							li(data-value="4") Геодезия
+				.lineedit
+					.date-period 
+						.inline За следующий период:
+						span.inline с
+						input(type="text", placeholder="дата от").inline.js-calendar-widget.calendar-widget-pop.inp-text_sm
+						a(href="#").js-open-cal.cal
+						span.inline до
+						input(type="text", placeholder="дата до").inline.js-calendar-widget.calendar-widget-pop2.inp-text_sm
+						a(href="#").js-open-cal.cal
+						.days
+							a(href="#change").js-change-dates вчера		
+							a(href="#change").js-change-dates неделю		
+							a(href="#change").js-change-dates месяц		
+							a(href="#change").js-change-dates все время		
+				.lineedit
+					a(href="#").btn-orange-wide.inline Построить отчет
+
+
 	.main-width.main-wrap
 		.organ-info
 			.prev
@@ -212,4 +258,4 @@ block append content
 					a(href="#") Все отчеты
 			.boxside-btns
 				.btn-reports
-					a(href="#").btn-orange-big Построить отчет
+					a(href="#report-add").btn-orange-big Построить отчет
