--- a/site/css/style.css
+++ b/site/css/style.css
@@ -4667,38 +4667,6 @@ textarea.error {
 textarea.valid {
   border-color: #3ac020;
 }
-input[type=checkbox] {
-  overflow: hidden;
-  display: none;
-  position: absolute;
-  width: 10px;
-  height: 10px;
-  margin: 0;
-  padding: 0;
-  border: 0;
-}
-input[type=checkbox] + label {
-  display: inline-block;
-  height: 22px;
-  padding-left: 30px;
-  font-size: 14px;
-  line-height: 23px;
-  vertical-align: middle;
-  cursor: pointer;
-  background: url("../img/checkbox.png") no-repeat;
-}
-input[type=checkbox].lightblue + label {
-  background: url("../img/checkbox4.png") no-repeat;
-}
-input[type=checkbox].light + label {
-  background: url("../img/checkbox3.png") no-repeat;
-}
-input[type=checkbox] + label:hover {
-  background-position: 0 0;
-}
-input[type=checkbox]:checked + label {
-  background-position: 0 -22px;
-}
 input[type="radio"] + label,
 input.input-radio + label {
   cursor: pointer;
@@ -4738,6 +4706,39 @@ input.input-radio:disabled + label::before {
 input[type="radio"]:checked:disabled + label::before,
 input.input-radio:checked:disabled + label::before {
   background-position: 0px -22px;
+}
+input[type="checkbox"] {
+  width: 17px;
+  height: 17px;
+  margin: 0 3px 0 0;
+  vertical-align: top;
+}
+input[type="checkbox"] + label {
+  cursor: pointer;
+}
+input[type="checkbox"]:not(checked) {
+  position: absolute;
+  opacity: 0;
+}
+input[type="checkbox"]:not(checked) + label {
+  position: relative;
+  display: inline-block;
+  padding: 0 0 0 30px;
+}
+input[type="checkbox"]:not(checked) + label:after {
+  content: '';
+  position: absolute;
+  top: -1px;
+  left: 0px;
+  width: 22px;
+  height: 22px;
+  background: url("../img/checkbox.png") no-repeat;
+}
+input[type="checkbox"]:checked + label:after {
+  background-position: 0 -22px;
+}
+input[type="checkbox"]:focus + label:before {
+  position: relative;
 }
 table {
   width: 100%;
@@ -4844,9 +4845,7 @@ table td {
   display: inline-block;
   max-width: 200px;
   overflow: hidden;
-  overflow: hidden;
   text-overflow: ellipsis;
-  white-space: nowrap;
   white-space: nowrap;
   vertical-align: middle;
 }
