--- a/source/jade/edit-interface.jade
+++ b/source/jade/edit-interface.jade
@@ -54,7 +54,7 @@ block append content
 						
 						//---------- ----------
 
-						mixin article(name)
+						mixin article(name, nopic)
 							.item-edit-con.js-edit-item-box
 								.articles__item
 									.articles__item-thumb
