--- a/site/css/style.css
+++ b/site/css/style.css
@@ -6344,7 +6344,7 @@ img.full {
 }
 .search-con {
   position: relative;
-  margin-bottom: 10px;
+  margin-bottom: 15px;
 }
 .search-con:after {
   content: " ";
@@ -6371,7 +6371,8 @@ img.full {
 .search-con .inp-text:focus {
   box-shadow: 0 1px 11px rgba(1,1,1,0.15);
 }
-.search-con .inp-submit {
+.search-con .inp-submit,
+.search-con .inp-submit_with-reset {
   position: absolute;
   right: 1px;
   top: 1px;
@@ -6383,11 +6384,31 @@ img.full {
   border-left: 1px solid #e5e5e5;
   background: url("../img/icons/search.png") center center no-repeat;
 }
-.search-con .inp-submit:hover {
+.search-con .inp-submit:hover,
+.search-con .inp-submit_with-reset:hover {
   background: url("../img/icons/search-h.png") center center no-repeat;
 }
-.search-con .inp-submit:active {
+.search-con .inp-submit:active,
+.search-con .inp-submit_with-reset:active {
   background: url("../img/icons/search-p.png") center center no-repeat;
+}
+.search-con .inp-submit_with-reset {
+  right: 140px;
+}
+.search-con .inp-reset {
+  position: absolute;
+  right: 1px;
+  top: 1px;
+  text-align: right;
+  display: inline-block;
+  margin: 0;
+  background: #fff;
+  padding: 15px 10px 15px 10px;
+  color: #ccc;
+  border-left: 1px solid #e5e5e5;
+}
+.search-con .inp-reset:hover {
+  color: #f85800;
 }
 .order-service {
   padding-top: 10px;
