--- a/source/styl/style.styl
+++ b/source/styl/style.styl
@@ -805,7 +805,7 @@ img.full
 	width 100%
 .search-con
 	position relative
-	margin-bottom 10px
+	margin-bottom 15px
 	&:after
 		content " "
 		background url("../img/icons/search-h.png") center center no-repeat
@@ -841,6 +841,22 @@ img.full
 			background url("../img/icons/search-h.png") center center no-repeat
 		&:active
 			background url("../img/icons/search-p.png") center center no-repeat
+	.inp-submit_with-reset
+		@extend .search-con .inp-submit 
+		right 140px
+	.inp-reset 
+		position absolute 
+		right 1px 
+		top 1px
+		text-align right
+		display inline-block
+		margin 0
+		background #fff
+		padding 15px 10px 15px 10px
+		color #CCC
+		border-left 1px solid #E5E5E5
+		&:hover
+			color-orange()
 .order-service
 	padding-top 10px
 	display inline-block
