--- a/source/jade/edit-interface.jade
+++ b/source/jade/edit-interface.jade
@@ -22,7 +22,7 @@ block append content
 			ul
 				li
 					a(href="#") Редактирование контента
-		.main-left
+		.main-full
 			.tabs-box.edit-interface
 				ul.tabs.js-tabs
 					li.tabs__item
